gaps for all the elements of profile section have been fixed for mobile and desktop; also, in the cards section , responsiveness fixed for mobile section

--- a/blocks/card.css
+++ b/blocks/card.css
@@ -44,6 +44,8 @@
     font-size: 16px;
     line-height: 1.2;
   }
+}
+@media screen and (max-width: 441px) {
   .card__image {
     width: 288px;
     height: 288px;
