--- a/blocks/page.css
+++ b/blocks/page.css
@@ -2,6 +2,7 @@
   max-width: 1440px;
   background-color: #fcf5e5;
   font-family: Poppins, Arial, Helvetica, sans-serif;
+  margin: 0 auto;
 }
 @media screen and (min-width: 1441px) {
   .page {
