--- a/blocks/profile.css
+++ b/blocks/profile.css
@@ -1,4 +1,5 @@
 .profile {
+  max-width: 1280px;
   display: flex;
   margin: 0 auto;
   padding: 34px 0 20px;
@@ -17,7 +18,7 @@
   flex-direction: column;
 }
 .profile__edit-button {
-  margin-top: auto;
+  margin-top: 114px;
   width: fit-content;
   border: none;
   color: #212121;
@@ -93,30 +94,28 @@
 }
 @media screen and (max-width: 647px) {
   .profile {
+    padding-top: 20px;
     flex-direction: column;
     gap: 10px;
     align-items: center;
   }
   .profile__avatar {
-    margin-right: 0;
+    margin: 0 0 12px;
     height: 80px;
     width: 80px;
-    margin-bottom: 6px;
-  }
-  .profile__column {
-    gap: 12px;
   }
   .profile__name {
     text-align: center;
     font-size: 20px;
     line-height: 1;
+    margin-bottom: 6px;
   }
   .profile__description {
     text-align: center;
   }
   .profile__edit-button {
     margin: 0 auto;
-    margin-top: 12px;
+    margin-top: 32px;
   }
   .profile__post-button {
     margin-top: 20px;
